fix works list hover image z-index
- Preview image now renders above other text on hover
- Hovered workItem lifts to z-index 10

--- a/components/WorksList/worklist.module.css
+++ b/components/WorksList/worklist.module.css
@@ -12,6 +12,7 @@
   top: 75%;
   right: 35%;
   display: none;
+  z-index: 100;
 }
 
 .workItem:hover .preview {
@@ -20,6 +21,8 @@
 
 .workItem:hover {
   background-color: var(--hover-color, pink);
+  z-index: 10;
+  position: relative;
 }
 
 .tags {
